added yarn package manager

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 <head>
     <title>CIRMMT Distinguished Speaker Series Visualizations</title>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link type="text/css" rel="stylesheet" href="node_modules/video.js/dist/video-js.min.css" />
 </head>
 
 <body>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="node_modules/d3/dist/d3.min.js"></script>
+    <script src="node_modules/video.js/dist/video.min.js"></script>
     <script src="index.js"></script>
 </body>
 
